--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     position: fixed;
     height: 100vh;
     width: 50vw;
-    background-color: white;
+    background-color: gray;
     z-index: 10;
     overflow: auto;
     display: flex;
@@ -28,8 +28,8 @@ body{
     align-items: center;
 }
 
-.sideBar .sideBarButton{
-    margin: 2px;
+.sideBar .sidebarButtons{
+    margin: 2em;
     text-align: center;
     height: 10vh;
     line-height: 10vh;
