--- a/style.css
+++ b/style.css
@@ -1,39 +1,61 @@
+ul{
+    list-style-type: none;
+}
 body{
     margin: 0;
-    min-width: 100vw;
+    min-width: 80vw;
     min-height: 100vh;
-    background-color: black;
+    background-color: #8D99AE;
 }
 
 .mobileNav{
     position: fixed;
-    bottom: 0;
+    top: 0;
     width: 100vw;
-    height: 5vh;
-    background-color: blue;
+    min-height: 8vh;
+    background-color: #2B2D42;
     display: flex;
     justify-content: flex-start ;
     align-items: center;
 }
+.mobileNav #hamburgerIcon{
+    margin-left: 2em;
+    max-height: 8vh;
+    z-index:15;
+    
+}
 .sideBar{
-    margin: 0;
+    opacity: 0;
+    margin-top: 8vh;
     position: fixed;
-    height: 100vh;
+    height: 92vh;
     width: 50vw;
-    background-color: gray;
+    background-color: #2B2D42;
     z-index: 10;
     overflow: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    transition: all 0.5s;
+    transform: translateX(-80vw);
+}
+.sideBar.open {
+    transform: translateX(0);
+    opacity: 100;
 }
 
 .sideBar .sidebarButtons{
-    margin: 2em;
+    font-family: 'Times New Roman', Times, serif;
+    color: #EDF2F4;
+    font-weight: bold;
+    font-size: 3em;
+    border:2px solid #EDF2F4;
+    margin-top: 0.2em;
     text-align: center;
-    height: 10vh;
-    line-height: 10vh;
-    background-color: pink;
-    width: 100%;
+    height: 15vh;
+    line-height: 15vh;
+    background-color: #2B2D42;
+    width: 98%;
 }
 
+.sideBar .sidebarButtons:hover, .sideBar .sidebarButtons:active{
+    background-color: #8D99AE;
+    text-decoration: underline;
+}
