--- a/style.css
+++ b/style.css
@@ -2,12 +2,20 @@ ul{
     list-style-type: none;
 }
 body{
+    padding: 0;
     margin: 0;
     min-width: 80vw;
     min-height: 100vh;
     background-color: #8D99AE;
 }
 
+.root{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    min-height: 100vh;
+    position: relative;
+}
 .mobileNav{
     position: fixed;
     top: 0;
